<resources>
    <string name="app_name">ComicManager</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_comic">Add new comic</string>
    <string name="show_comic_name">Show comics</string>
    <string name="ComicCountText">comic count:</string>
    <string name="main_initial_text">Push button for new comic!</string>
    <string name="goto_browser">Browse Comics</string>
    <string name="comic_list_empty_text">No Comics to show :(</string>
    <string name="goto_searcher">Search Comics</string>
    <string name="action_add_comic">New Comic</string>
    <string name="list_item_title_placeholder">Title</string>
    <string name="detail_comic_title_placeholder">Comic Title</string>
    <string name="detail_issue_title_label">Title:</string>
    <string name="detail_issue_title_placeholder">Issue title placeholder can be long too</string>
    <string name="detail_published_label">Published:</string>
    <string name="detail_published_placeholder">published placeholder</string>
    <string name="detail_editor_label">Editor:</string>
    <string name="detail_editor_placeholder">Editor Name</string>
    <string name="detail_writer_label">Writer:</string>
    <string name="detail_writer_placeholder">Write Name</string>
    <string name="detail_penciler_label">Penciler:</string>
    <string name="detail_penciler_placeholder">Penciler Name</string>
    <string name="detail_summary_label">Summary:</string>
    <string name="detail_summary_placeholder">Summary Placeholder: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="comic_uploader_actionbar_label">Add New Comic</string>
    <string name="browser_actionbar_label">Browse Comics!</string>
    <string name="comic_uploader_description">Give the details of the comic!</string>
    <string name="comic_uploader_title_label">Title:</string>
    <string name="uploader_cover_src_path_label">Image source:</string>
    <string name="uploader_cover_show_img">Add Image</string>
    <string name="comic_uploader_save_button_text">Save Comic</string>
    <string name="issue_uploader_description">Give the details of the issue!</string>
    <string name="issue_uploader_comic_title_label">Comic Title:</string>
    <string name="issue_uploader_issue_number_label">Number in Title:</string>
    <string name="issue_uploader_issue_title_label">Issue Title:</string>
    <string name="issue_uploader_published_label">Published:</string>
    <string name="issue_uploader_editor_label">Editor:</string>
    <string name="issue_uploader_writer_label">Writer:</string>
    <string name="issue_uploader_penciler_label">Penciler:</string>
    <string name="issue_uploader_save_button_text">Save Issue</string>

    <string name="issue_list_no_issue_label">No comic issues found!</string>
    <string name="issue_uploader_comic_title_text">Comic title placeholder</string>
    <string name="title_activity_search">Search for Comics</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_comic_title_label">Title:</string>
    <string name="search_result_button">Show Results</string>
    <string name="search_issue_creator_label">Creator:</string>
    <string name="search_issue_published_label">Published:</string>
    <string name="issue_uploader_actionbar_label">New Issue</string>
    <string name="action_edit">Edit issue</string>
    <string name="action_delete">Remove issue</string>
    <string name="action_delete_comic">Remove Comic</string>
    <string name="action_edit_comic">Edit Comic</string>
</resources>
