<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/comic_uploader_description"
        android:id="@+id/comic_uploader_description"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/comic_uploader_title_label"
        android:id="@+id/comic_uploader_title_label"
        android:labelFor="@id/comic_uploader_title_editor"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/comic_uploader_description"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comic_uploader_title_editor"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/comic_uploader_title_label"
        android:layout_alignParentStart="true"
        android:inputType="textCapWords"/>

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/comic_uploader_cover"
        android:layout_below="@+id/comic_uploader_title_editor"
        xmlns:tools="http://schemas.android.com/tools"
        tools:layout="@layout/fragment_image_uploader"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comic_uploader_save_button_text"
        android:id="@+id/comic_uploader_save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>