<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bme.aut.comicmanager.ui.searcher.SearchIssueFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:background="#b9b9b9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/search_issue_title_label"
            android:labelFor="@+id/search_issue_title_editor"
            android:text="@string/search_comic_title_label" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_issue_title_editor"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/search_issue_title_label"
            android:background="#f7f5f5"
            android:layout_marginLeft="@dimen/search_issue_label_editor_margin"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/search_issue_creator_label"
            android:labelFor="@+id/search_issue_creator_editor"
            android:text="@string/search_issue_creator_label"
            android:layout_below="@+id/search_issue_title_label"
            android:layout_marginTop="@dimen/search_issue_row_margin" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_issue_creator_editor"
            android:background="#f7f5f5"
            android:layout_marginLeft="@dimen/search_issue_label_editor_margin"
            android:inputType="text"
            android:layout_alignTop="@+id/search_issue_creator_label"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/search_issue_creator_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/search_issue_published_label"
            android:labelFor="@+id/search_issue_published_editor"
            android:text="@string/search_issue_published_label"
            android:layout_below="@+id/search_issue_creator_label"
            android:layout_marginTop="@dimen/search_issue_row_margin" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_issue_published_editor"
            android:background="#f7f5f5"
            android:layout_marginLeft="@dimen/search_issue_label_editor_margin"
            android:inputType="text"
            android:layout_alignTop="@+id/search_issue_published_label"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/search_issue_published_label" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_result_button"
            android:id="@+id/search_issue_result_button"
            android:layout_below="@+id/search_issue_published_editor"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_issue_list_fragment"
        android:name="bme.aut.comicmanager.ui.issueList.IssueListFragment"
        xmlns:tools="http://schemas.android.com/tools"
        tools:layout="@layout/fragment_issue_list"/>

</LinearLayout>
